force-app/main/default/objects/Apttus_Pricing_Data_Config__mdt/Apttus_Pricing_Data_Config__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata will be used to drive the creation of PLI&apos;s , PM&apos;s &amp; PME&apos;s via the pricing batch jobs. Specific settings for different product types like Domestic (Startrack &amp; Others) &amp; International are stored in this custom metadata.</description>
    <label>Apttus Pricing Data Config</label>
    <pluralLabel>Apttus Pricing Data Configs</pluralLabel>
</CustomObject>