force-app/main/default/objects/Apttus_Pricing_Data_Config__mdt/fields/National_Rate_Products__c.field-meta.xml
<CustomField>
    <fullName>National_Rate_Products__c</fullName>
    <description>startrack products with national rates by comma separated</description>
    <inlineHelpText>Add startrack products with national rates by comma separated</inlineHelpText>
    <label>National Rate Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>