force-app/main/default/objects/Apttus_Pricing_Data_Config__mdt/fields/Order_By_Fields__c.field-meta.xml
<CustomField>
    <fullName>Order_By_Fields__c</fullName>
    <label>Order By Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>