force-app/main/default/objects/Apttus_Pricing_Data_Config__mdt/fields/Pricing_Key_Constituents__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Key_Constituents__c</fullName>
    <description>Comma separated list of the paramters which constitutes the pricing key which determines the creation of PLI&apos;s &amp; PME&apos;s.</description>
    <label>Pricing Key Constituents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>