force-app/main/default/objects/Apttus_Pricing_Data_Config__mdt/fields/Use_Default_PLI_Config__c.field-meta.xml
<CustomField>
    <fullName>Use_Default_PLI_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to specify whether the PLI&apos;s use default pricing config defined for the product type or whether pricing config defined for the specific product.</description>
    <label>Use Default PLI Config</label>
    <type>Checkbox</type>
</CustomField>